<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Persona">

    <TextView
        android:id="@+id/txtNom"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtNom"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/idNom2"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/idNom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/idMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/idMail"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="71dp" />

    <EditText
        android:id="@+id/idMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/idPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtProvincia"
        app:layout_constraintEnd_toStartOf="@+id/idPassword"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.649" />

    <EditText
        android:id="@+id/idPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/txtProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/txtProvincia"
        app:layout_constraintBottom_toTopOf="@+id/txtSexe"
        app:layout_constraintEnd_toStartOf="@+id/idProvincies"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/idProvincies"
        android:layout_width="241dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/idSexe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassword"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txtSexe"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="84dp"
        android:text="@string/txtSexe"
        app:layout_constraintBottom_toTopOf="@+id/txtAficions"
        app:layout_constraintEnd_toStartOf="@+id/idSexe"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAficions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtAficions"
        app:layout_constraintEnd_toStartOf="@+id/idChkBasquet"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="385dp" />

    <CheckBox
        android:id="@+id/idChkFutbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="204dp"
        android:layout_marginRight="204dp"
        android:text="@string/txtFutbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/txtAficions"
        tools:layout_editor_absoluteY="385dp" />

    <CheckBox
        android:id="@+id/idChkBasquet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtBasquet"
        app:layout_constraintBottom_toTopOf="@+id/idChkNatacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idChkFutbol"
        app:layout_constraintVertical_bias="0.615" />

    <CheckBox
        android:id="@+id/idChkNatacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txtNatacion"
        app:layout_constraintBottom_toTopOf="@+id/idAniversari"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtAniversari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtAniversari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idAniversari"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAficions"
        app:layout_constraintVertical_bias="0.526" />

    <EditText
        android:id="@+id/idAniversari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="44dp"
        android:text="@string/txtBtnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/idSexe"
        android:layout_width="249dp"
        android:layout_height="79dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/idChkFutbol"
        tools:layout_editor_absoluteX="94dp">

        <RadioButton
            android:id="@+id/Home"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtHome" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDona" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>